--- a/app/assets/javascripts/backbone/templates/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/index.jst.ejs
@@ -1,25 +1,57 @@
-<div class="nav">
-  <div class="adjustable-nav">
-    <a href="#" class="logo">YD</a>
-    <div class="open-nav-links"><i class="icon-reorder"></i></div>
+<!-- Featured show -->
+<% featuredShow = shows.at(0); %>
+<div class="featured-show">
+  <div class="featured-image">
+    <div class="featured-image-bg" style="background-image: url('<%= featuredShow.get("photo").large %>')"></div>
+    <div class="featured-details">
+      <div id="coming-up-next">Coming Up Next</div>
+      <div class="name"><%= featuredShow.get("name") %></div>
+      <button id="tickets-button" data-id="<%= featuredShow.id %>">Details + Tickets</button>
+    </div>
   </div>
-  <div class="collapsible-nav">
-    <ul class="nav-links">
-      <a href="#members"><li>Company Members</li></a>
-      <a href="#about"><li>About the Company</li></a>
-      <a href="#gallery"><li>Gallery</li></a>
-      <a href="#contact"><li>Contact Us</li></a>
-    </ul>
-    
-    <div class="nav-footer">
-      Subscribe to our YouTube channel to see selections from performances past and present, and for a peek behind the scenes with rehearsal footage
-      
-      <div class="nav-social">
-        <a href="http://www.youtube.com/user/Yaledancers"><i class="icon-youtube"></i></a>
-        <a><i class="icon-instagram"></i></a>
-        <a href="https://www.facebook.com/pages/Yaledancers/447570198675301"><i class="icon-facebook-sign"></i></a>
+  <div class="featured-info" style="display: none">
+    <div class="inline-block">
+      <div class="info">
+        <span>Location</span>
+        <%= featuredShow.get("location") %>
+      </div>
+      <div class="info">
+        <span>Student Price</span>
+        <%= featuredShow.get("student_price") %>
+      </div>
+      <div class="info">
+        <span>Non-student price</span>
+        <%= featuredShow.get("non_student_price") %>
+      </div>
+    </div>
+    <div class="inline-block performances">
+      <div class="info">
+        <span>Performances</span>
+        <% for(j = 0; j < featuredShow.get("performances").length; j++) { %>
+          <div class="performance">
+            <%= moment(featuredShow.get("performances")[j].start_at).format("dddd, MMMM Do YYYY, h:mm a") %>
+          </div>
+        <% } %>
+      </div>
+      <div class="info">
+        <span>Reservations</span>
+        Email <a href="mailto:yaledancers@gmail.com">yaledancers@gmail.com</a> to reserve tickets
       </div>
     </div>
   </div>
 </div>
-<div class="container"></div>
+
+<!-- Previous two shows -->
+<div class="shows">
+  <div id="previous-shows">Previous Shows</div>
+  
+  <% for(i = 1; i < shows.length; i++ ) { %>
+    <% show = shows.at(i); %>
+    <div class="previous-show">
+      <div class="previous-show-image" style="background-image: url('<%= show.get('photo').medium %>')"></div>
+      <div class="previous-show-details">
+        <div class="previous-show-name"><%= show.get("name") %></div>
+      </div>
+    </div>
+  <% } %>
+</div>
