--- a/app/assets/stylesheets/_mixins.css.scss
+++ b/app/assets/stylesheets/_mixins.css.scss
@@ -1,5 +1,5 @@
 //Fonts
-@font-face { font-family: Gotham-Bold; src: url('/assets/Gotham-Bold.otf'); } 
+@font-face { font-family: Gotham-Bold; src: url('/assets/Gotham-Bold.otf'); }
 @font-face { font-family: Gotham-Book; src: url('/assets/Gotham-Book.otf'); } 
 @font-face { font-family: Gotham-Light; src: url('/assets/Gotham-Light.otf'); } 
 @font-face { font-family: Gotham-XLight; src: url('/assets/Gotham-XLight.otf'); } 
@@ -41,4 +41,13 @@
   #{$attribute}: -webkit-calc(#{$x});
   #{$attribute}: -o-calc(#{$x});
   #{$attribute}: calc(#{$x});
+}
+
+@mixin linear-gradient($direction, $x, $y) {
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#{$x}), to(#{$y}));
+  background-image: -moz-linear-gradient(#{$direction}, #{$x}, #{$y});
+  background-image: -ms-linear-gradient(#{$direction}, #{$x}, #{$y});
+  background-image: -webkit-linear-gradient(#{$direction}, #{$x}, #{$y});
+  background-image: -o-linear-gradient(#{$direction}, #{$x}, #{$y});
+  background-image: linear-gradient(#{$direction}, #{$x}, #{$y});
 }
