--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -9,6 +9,7 @@ $nav-width: 100px;
 $nav-width-expanded: 300px;
 $background-color: #eee;
 $purple: #6600CC;
+$nav-transition: 0.1s;
 
 // Style
 body {
@@ -18,6 +19,18 @@ body {
   background: $background-color;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+  border-bottom: 1px dotted black;
+  @include transition(0.15s);
+  
+  &:hover {
+    color: $purple;
+    border-bottom: 1px solid $purple;
+  }
+}
+
 .nav {
   position: fixed;
   top: 0;
@@ -25,7 +38,8 @@ body {
   width: $nav-width;
   height: 100%;
   background: white;
-  @include transition(0.1s);
+  @include transition($nav-transition);
+  z-index: 2;
   
   &.open {
     width: $nav-width-expanded;
@@ -47,7 +61,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    @include transition(0.15s);
+    @include transition($nav-transition);
     background: white;
   }
   
@@ -77,12 +91,24 @@ body {
 
   .open-nav-links {
     width: $nav-width;
+    height: $nav-width;
     text-align: center;
     padding: 20px;
     box-sizing: border-box;
     cursor: pointer;
     @include calc(font-size, "#{$nav-width}/2.3");
     color: #ccc;
+    
+    i {
+      width: $nav-width - 40px;
+      height: $nav-width - 40px;
+      line-height: $nav-width - 40px;
+      background: none;
+    }
+    
+    .icon-double-angle-left {
+      font-size: $nav-width - 40px;
+    }
     
     &:hover {
       color: #777;
@@ -138,10 +164,429 @@ body {
       margin-right: 5px;
       color: #555;
       text-decoration: none;
+      border: 0;
       
       &:hover {
         color: $purple;
+        border: 0;
       }
     }
+  }
+}
+
+.container {
+  position: absolute;
+  top: 0;
+  left: $nav-width;
+  @include calc(width, "100% - #{$nav-width}");
+  min-width: 500px;
+}
+
+.content {
+  padding: 20px;
+}
+
+// Index
+.featured-show {
+  $featured-show-padding: 50px;
+  width: 100%;
+  
+  .featured-image {
+    min-height: 400px;
+    position: relative;
+    background: $purple;
+  }
+  
+  .featured-image-bg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    opacity: 0.6;
+  }
+  
+  .featured-details {
+    width: 50%;
+    max-width: 700px;
+    padding: 50px;
+    color: white;
+    position: relative;
+    
+    #coming-up-next {
+      text-transform: uppercase;
+      font-style: italic;
+      @include G-Bold;
+      color: white;
+      margin-bottom: 15px;
+    }
+    
+    .name {
+      @include G-XLight;
+      font-size: 80px;
+      line-height: 100px;
+      opacity: 0.8;
+    }
+    
+    button#tickets-button {
+      background: transparent;
+      border: 2px solid white;
+      padding: 20px;
+      font-size: 18px;
+      margin-top: 20px;
+      @include G-Light;
+      text-transform: uppercase;
+      color: white;
+      border-radius: 10px;
+      cursor: pointer;
+      @include transition(0.15s);
+      opacity: 0.8;
+      
+      &:hover {
+        background: $purple;
+      }
+    }
+  }
+  
+  .featured-info {
+    padding: $featured-show-padding;
+    background: black;
+    border-top: 1px solid #777;
+    border-bottom: 1px solid #dadada;
+    color: white;
+    
+    .inline-block {
+      display: inline-block;
+      vertical-align: top;
+      margin-right: 30px;
+      line-height: 22px;
+    }
+    
+    .info {
+      margin-bottom: 15px;
+    }
+    
+    a {
+      color: white;
+      border-bottom: 1px dotted white;
+    }
+    
+    span {
+      @include G-Bold;
+      text-transform: uppercase;
+      display: block;
+      margin-bottom: 5px;
+      border-bottom: 1px dotted white;
+    }
+  }
+}
+
+.shows {
+  padding: 50px;
+  
+  #previous-shows {
+    margin-bottom: 20px;
+    @include G-Bold;
+    font-style: italic;
+    text-transform: uppercase;
+    color: black;
+  }
+  .previous-show {
+    width: 400px;
+    display: inline-block;
+    margin-right: 20px;
+    
+    .previous-show-image {
+      width: 100%;
+      height: 280px;
+      background-position: center;
+      background-repeat: no-repeat;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-color: $purple;
+    }
+    
+    .previous-show-name {
+      @include calc(width, "100% - 40px");
+      font-size: 20px;
+      line-height: 26px;
+      @include G-Light;
+      margin-top: 10px;
+    }
+  }
+}
+
+// Gallery
+#gallery {
+  
+  .gallery-row {
+    min-height: 150px;
+    margin-bottom: 8px;
+  }
+  
+  img {
+    margin: 0 4px;
+    display: block;
+    float: left;
+    cursor: pointer;
+    @include transition(opacity 0.15s);
+    
+    &:hover {
+      opacity: 0.85;
+    }
+  }
+}
+
+#popover {
+  position: fixed;
+  top: 0;
+  left: $nav-width;
+  height: 0;
+  width: 0;
+  background: rgba(0,0,0,0);
+  @include transition(opacity 0.5s);
+  text-align: center;
+  
+  &.open {
+    @include calc(width, "100% - #{$nav-width}");
+    height: 100%;
+    background: rgba(0,0,0,0.9);
+  }
+  
+  img {
+    height: 100%;
+  }
+  
+  .medium-photo,
+  .large-photo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .medium-photo {
+    z-index: 0;
+  }
+  
+  .large-photo {
+    z-index: 1;
+  }
+  
+  .close-popover {
+    border: 1px solid white;
+    padding: 5px 8px;
+    cursor: pointer;
+    
+    &:hover {
+      background: black;
+    }
+  }
+  
+  .bottom-menu,
+  .top-menu {
+    position: absolute;
+    color: white;
+    left: 10%;
+    width: 80%;
+    @include G-XLight;
+    font-size: 18px;
+    z-index: 2;
+  }
+  
+  .top-menu {
+    top: 0;
+    padding-top: 30px;
+  }
+  
+  .bottom-menu {
+    bottom: 0;
+    padding-bottom: 30px;
+  }
+  
+  label {
+    display: block;
+    font-size: 13px;
+    @include G-Regular;
+    border-bottom: 1px solid $purple;
+    margin-bottom: 5px;
+    text-align: left;
+    padding-bottom: 5px;
+  }
+  
+  .pull-right label {
+    text-align: right;
+  }
+}
+
+// Member
+$members-list-width: 30%;
+
+.members-panel {
+  position: fixed;
+  top: 0;
+  height: 100%;
+}
+
+#members-list {
+  width: $members-list-width;
+  min-width: 300px;
+  background: #eee;
+  z-index: 1;
+  left: $nav-width;
+  box-sizing: border-box;
+  
+  h1 {
+    height: $nav-width;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0 30px;
+    background: #dadada;
+    line-height: $nav-width;
+    @include calc(font-size, "#{$nav-width}/2.3");
+    @include G-Light;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 10px 30px;
+  }
+  
+  li {
+    margin: 0;
+    padding: 10px 0;
+  }
+  
+  .member {
+    cursor: pointer;
+    font-size: 20px;
+    
+    span {
+      @include G-Light;
+    }
+    
+    &:hover {
+      border-bottom: 1px dotted #333;
+    }
+  }
+}
+
+#members-show {
+  @include calc(width, "100% - #{$members-list-width} - #{$nav-width}");
+  min-width: 500px;
+  @include calc(left, "#{$nav-width} + #{$members-list-width}");
+  background-color: #333;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  z-index: 0;
+}
+
+.member-container {
+  width: 100%;
+  height: 100%;
+  background: rgba(200, 200, 200, 0.8); /* Old browsers */
+  background: -moz-linear-gradient(left, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.8) 40%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(0,0,0,0.1)), color-stop(40%, rgba(0,0,0,0.8)), color-stop(100%, rgba(0,0,0,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.8) 40%, rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.8) 40%, rgba(0,0,0,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.8) 40%, rgba(0,0,0,1) 100%); /* IE10+ */
+  background: linear-gradient(to right, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.8) 40%, rgba(0,0,0,1) 100%); /* W3C */
+  padding: 0 60px;
+  text-align: right;
+  color: white;
+  box-sizing: border-box;
+  @include G-Light;
+  overflow: scroll;
+  padding-bottom: 50px;
+}
+
+.member-text {
+  width: 50%;
+  min-width: 400px;
+  position: absolute;
+  right: 50px;
+}
+
+.member-name {
+  box-sizing: border-box;
+  padding: 20px 0;
+  margin: 0;
+  line-height: $nav-width - 40px;
+  @include calc(font-size, "#{$nav-width}/2.3");
+  border-bottom: 1px solid white;
+  @include G-Light;
+}
+
+.member-subtitle {
+  padding: 20px 0;
+  font-size: 20px;
+  color: #eee;
+  font-style: italic;
+}
+
+.member-bio {
+  @include G-XLight;
+  line-height: 22px;
+}
+
+// About
+.about,
+.central-photo {
+  width: 100%;
+  box-sizing: border-box;
+  
+  h2 {
+    @include G-XLight;
+    line-height: 35px;
+    margin: 0;
+  }
+}
+
+.central-photo {
+  background-image: url("/assets/bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  position: relative;
+  
+  .central-photo-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #451671;
+    opacity: 0.55;
+    height: 100%;
+    z-index: 0;
+  }
+  
+  h2 {
+    color: white;
+    max-width: 520px;
+    padding: 60px 40px;
+    position: relative;
+    z-index: 1;
+  }
+}
+
+.about {
+  max-width: 600px;
+  padding: 40px;
+  
+  p {
+    @include G-Light;
+    line-height: 23px;
+    font-size: 14px;
   }
 }
