Image url links

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -554,7 +554,7 @@ $members-list-width: 30%;
 }
 
 .central-photo {
-  background-image: image-url("/assets/bg.jpg");
+  background-image: image-url("bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% auto;
