--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -285,6 +285,21 @@ a {
     border-bottom: 1px solid #dadada;
     color: white;
     
+    &.light {
+      background: none;
+      color: #333;
+      border-bottom: 0;
+      
+      a {
+        color: black;
+        border-bottom: 1px dotted black;
+      }
+      
+      span {
+        border-bottom: 1px dotted black;
+      }
+    }
+    
     .inline-block {
       display: inline-block;
       vertical-align: top;
@@ -311,6 +326,10 @@ a {
   }
 }
 
+#show-image {
+  min-height: 300px;
+}
+
 .shows {
   padding: 50px;
   
@@ -325,6 +344,9 @@ a {
     width: 400px;
     display: inline-block;
     margin-right: 20px;
+    position: relative;
+    border: 0;
+    margin-bottom: 20px;
     
     .previous-show-image {
       width: 100%;
@@ -339,12 +361,37 @@ a {
       background-color: $purple;
     }
     
+    .previous-show-details {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      padding: 30px;
+      box-sizing: border-box;
+      background: rgba(0,0,0,0.6);
+      opacity: 0.7;
+      @include transition(opacity 0.2s);
+    }
+    
     .previous-show-name {
-      @include calc(width, "100% - 40px");
-      font-size: 20px;
-      line-height: 26px;
       @include G-Light;
-      margin-top: 10px;
+      font-size: 24px;
+      line-height: 38px;
+      font-family: Gotham-Bold, Helvetica, Arial, "Lucida Grande", sans-serif;
+      font-weight: bold;
+      text-align: center;
+      color: white;
+      border: 2px solid white;
+      padding: 30px 10px;
+      text-transform: uppercase;
+      margin-top: 40px;
+    }
+    
+    &:hover {
+      .previous-show-details {
+        opacity: 1;
+      }
     }
   }
 }
