Better gallery popover

--- a/app/assets/javascripts/backbone/templates/gallery/photo.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/gallery/photo.jst.ejs
@@ -1,4 +1,4 @@
-<div class="popover-photo">
+<div class="gallery-photo-focus">
   <div class="top-menu">
     <div class="pull-right">
       <span class="close-popover">X</span>
@@ -14,13 +14,6 @@
   </div>
   
   <div class="bottom-menu">
-    <div class="pull-left">
-      <label><%= title %></label>
-      <%= description || "YaleDancers Photo" %>
-    </div>
-    <div class="pull-right">
-      <label>Date Taken</label>
-      <%= datetaken %>
-    </div>
+    <a class="close-photo"><i class="icon-chevron-sign-up"></i> Close</a>
   </div>
 </div>
