--- a/app/assets/javascripts/backbone/templates/gallery/row.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/gallery/row.jst.ejs
@@ -4,3 +4,4 @@
     <img class="gallery-photo" height="<%= height %>" src="<%= photo.get('url_m') %>" data-id="<%= photo.get('id') %>" />
   <% } %>
 </div>
+<div class="gallery-row-show" data-id="<%= id %>"></div>
